--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,16 +1,32 @@
 .card {
-  background-color: bisque;
   display: flex;
   flex-direction: column;
+  color: white;
   align-items: center;
-  width: 30%;
-  height: 20%;
+  margin: 10px;
+}
+.card:hover {
+  background-color: bisque;
+  color: black;
 }
 .card-buttons {
-  border: 1px solid white;
-  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  width: 10%;
+  justify-content: space-between;
   background-color: black;
+  border-radius: 20px;
 }
-.card-buttons:hover {
-  background-color: rgb(37, 36, 36);
+p {
+  color: white;
+}
+p:hover {
+  color: black;
+}
+button {
+  border-radius: 50px;
+  padding: 10px;
+}
+button:hover {
+  background-color: azure;
 }
